--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 
 	<title>CSS and HTML Review</title>
 </head>
 <body>
 	<h1>All about HTML and CSS</h1>
-	<script type="js/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
