--- a/index.html
+++ b/index.html
@@ -18,6 +18,37 @@
 			</nav>
 			<div id="logo"></div>
 		</header>
+
+		<section id="featured-content">
+		 	<h2 class="hidden">Featured Product</h2>
+		 	<div class="featured-image"></div>
+		 	<p id="featured-image-description"></p>
+		 </section> 
+
+		 <section id="hero-image">
+		 	<h2 class="hidden">Wide angle shot of product</h2>
+		 </section>
+		 <!-- this is social media promo stuff -->
+		 <section id="promo-container">
+		 	<h2 class="hidden">Product Promotion</h2>
+
+		 	<div id="socialm-media-promo">
+		 		<section id="social-media">
+		 			<h2 class="hidden">Social media promo icons</h2>
+		 			<div></div>
+		 			<div></div>
+		 			<div></div>
+		 		</section>
+
+		 		<p id="promo-text"></p>
+		 	</div>
+
+		 	<section id="promo-image">
+		 		<h2 class="hidden"></h2>
+		 	</section>
+		 </section>
+		<!-- end social media promo -->
+
 	</main>
 	
 	<footer id="main-footer">
